--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,12 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^7.2"
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Test\\": "test",
+            "Test\\Stubs\\": "stubs",
+            "App\\": "app"
+        }
     }
 }
