--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "sass-loader": "^7.0.3",
     "uglifyjs-webpack-plugin": "^1.2.7",
     "vue-loader": "^14.2.2",
+    "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^3.10.0",
     "webpack-cli": "^3.0.8",
